Removing timezone from twig file

--- a/templates/block--current-location.html.twig
+++ b/templates/block--current-location.html.twig
@@ -38,6 +38,6 @@
       {{ content }}
     {% endblock %}
     <div>
-     <p>Time in {{ city }}, {{ country }}, {{ timezone }}</p>
+     <p>Time in {{ city }}, {{ country }}</p>
     </div>
   </div>
